# schola-api

./: README.md  app.py  pyproject.toml  requirements.txt
api/models/: announcements.py  user.py
api/routes/: announcements.py  auth.py  communities.py  event.py  post.py  user.py
api/schemas/: user.py
config/: config.py
database/: db.py
utils/: oauth2.py  permissions.py  s3.py  utils.py
