[tool.poetry]
name = "schola-backend"
version = "0.1.0"
description = ""
authors = ["greatnessmensah <ephraimmensah99@gmail.com>"]
readme = "README.md"
packages = [{include = "schola_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.103.2"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.8.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.21"
python-multipart = "^0.0.6"
boto3 = "^1.28.57"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
